<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/addApartmentName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/apartmentName"
        android:inputType="text" />

    <EditText
        android:id="@+id/apartmentAddress"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/apartmentName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="text" />

    <EditText
        android:id="@+id/apartmentNumber"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/apartmentAddress"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/apartmentNum"
        android:inputType="text" />

    <EditText
        android:id="@+id/payerСode"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/apartmentNumber"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/payerСode"
        android:inputType="text" />

    <EditText
        android:id="@+id/energyCode"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/payerСode"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/energyCode"
        android:inputType="text" />

    <EditText
        android:id="@+id/energyDeviceCode"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/energyCode"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="14dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/energyDeviceCode"
        android:inputType="text" />

    <Button
        android:id="@+id/continueNewApartment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/energyDeviceCode"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:layout_weight="1"
        android:ems="10"
        android:text="Продолжить" />

</LinearLayout>